--- a/assets/styles/pages/map.less
+++ b/assets/styles/pages/map.less
@@ -82,6 +82,20 @@
   display: none;
 }
 
+@media only screen and (max-width: 600px) {
+  #surveycontainer {
+    width: 90%;
+    right: 10px;
+    bottom: 110px;
+  }
+
+  #surveybutton {
+    position: absolute;
+    bottom: 40px;
+    right: 10px;
+  }
+}
+
 #customform {
   display: block;
 }
